--- a/less/abstracts/mixins.less
+++ b/less/abstracts/mixins.less
@@ -20,3 +20,12 @@
   font-size: 28px;
   color: #c1c1c1;
 }
+.placeholder-style() {
+  font-family: "Roboto", "Arial", sans-serif;
+  font-size: 12px;
+  line-height: 18px;
+  font-weight: 500;
+  color:black;
+  opacity: 1;
+  text-transform: uppercase;
+}
