--- a/less/component-blocks/main-nav.less
+++ b/less/component-blocks/main-nav.less
@@ -25,13 +25,16 @@
   color: #000000;
   text-decoration: none;
   text-transform: uppercase;
+  transition: color .7s;
 }
 .main-nav__item a:hover {
   color: #fb565a;
+  transition: color .3s;
 }
 .main-nav__item a:active {
   color: #000000;
   opacity: .4;
+  transition: color .3s;
 }
 .main-nav__item--active a::after {
   content: "";
