--- a/less/component-blocks/btn.less
+++ b/less/component-blocks/btn.less
@@ -1,5 +1,6 @@
 .btn {
   display: inline-block;
+  vertical-align: baseline;
   padding: 10px 40px;
   font-size: 12px;
   line-height: 14px;
@@ -12,12 +13,138 @@
   border: none;
   outline: none;
   cursor: pointer;
+  transition: background-color .7s,
+              box-shadow .7s;
 }
-.btn.btn--submit {
+.btn:hover {
+  background-color: #d6494d;
+  transition: background-color .3s,
+              box-shadow .3s;
+}
+.btn:active {
+  background-color: #b63538;
+  box-shadow: inset 0 3px 0 0 #9b2d30;
+  transition: background-color .3s,
+              box-shadow .3s;
+}
+.btn--social {
+  padding: 0;
+  width: 60px;
+  height: 60px;
+  margin-right: 27px;
+  border-radius: 50%;
+  font-family: "symbols-nerds";
+  font-size: 23px;
+  line-height: 60px;
+  text-decoration: none;
+  text-align: center;
+  color: #ffffff;
+  background-color: #e1e1e1;
+  overflow: hidden;
+}
+.btn--submit {
   color: black;
   background-color: #eeeeee;
-  cursor: pointer;
 }
-.btn.btn--modal {
+.btn--submit:hover {
+  background-color: #e5e5e5;
+}
+.btn--submit:active {
+  background-color: #d5d5d5;
+  box-shadow: inset 0 3px 0 0 #b5b5b5;
+}
+.btn--modal {
   width: 100%;
+}
+.btn--red {
+  background-color: #fb565a;
+}
+.btn--red:hover {
+  background-color: #d6494d;
+}
+.btn--red:active {
+  background-color: #b63538;
+  box-shadow: inset 0 3px 0 0 #9b2d30;
+}
+.btn--green {
+  background-color: #00ca74;
+}
+.btn--green:hover {
+  background-color: #01a25e;
+}
+.btn--green:active {
+  background-color: #009053;
+  box-shadow: inset 0 3px 0 0 #007b47;
+}
+.btn--yellow {
+  background-color: #efc84a;
+}
+.btn--yellow:hover {
+  background-color: #d6ae2c;
+}
+.btn--yellow:active {
+  background-color: #c09b24;
+  box-shadow: inset 0 3px 0 0 #a3841f;
+}
+.btn--close {
+  position: absolute;
+  padding: 0;
+  right: 6px;
+  top: 7px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  outline: none;
+  border: none;
+  background-color: #fb565a;
+}
+.btn--close::after {
+  content: "";
+  position: absolute;
+  display: block;
+  top: 18px;
+  left: 8px;
+  width: 25px;
+  height: 5px;
+  background-color: white;
+  transform: rotate(-45deg);
+}
+.btn--close::before {
+  content: "";
+  position: absolute;
+  display: block;
+  top: 18px;
+  left: 8px;
+  width: 25px;
+  height: 5px;
+  background-color: white;
+  transform: rotate(45deg);
+}
+.btn--paginator {
+  min-width: 8px;
+  height: 38px;
+  padding: 0 15px;
+  font-size: 16px;
+  line-height: 38px;
+  color: black;
+  box-shadow: inset 0 0 0 2px #f2f2f2;
+  text-align: center;
+  background-color: #f1f1f1;
+  border-radius: 5px;
+}
+.btn--paginator-active {
+  background-color: white;
+}
+.btn--paginator:hover {
+  background-color: #e5e5e5;
+  box-shadow: none;
+}
+.btn--paginator:active {
+  background-color: #d5d5d5;
+  box-shadow: inset 0 3px 0 0 #b5b5b5;
+}
+li:last-child .btn--paginator {
+  width: auto;
+  padding: 0 32px;
+  height: 38px;
 }
