--- a/less/component-blocks/clients.less
+++ b/less/component-blocks/clients.less
@@ -19,3 +19,15 @@
 .client__block:nth-child(3n) {
   text-align: right;
 }
+.client__block a {
+  opacity: .2;
+  transition: opacity .7s;
+}
+.client__block a:hover {
+  opacity: 1;
+  transition: opacity .3s;
+}
+.client__block a:active {
+  opacity: 1;
+  transition: opacity .3s;
+}
