--- a/less/component-blocks/filters.less
+++ b/less/component-blocks/filters.less
@@ -102,3 +102,20 @@ input[type="checkbox"]:checked + label::before {
   content: "\2611";
   .input-style();
 }
+
+input[type="radio"] + label:hover,
+input[type="checkbox"] + label:hover {
+  color: black;
+}
+input[type="radio"] + label:hover::before,
+input[type="checkbox"] + label:hover::before {
+  color: #b5b5b5;
+}
+input[type="radio"]:disabled + label,
+input[type="checkbox"]:disabled + label {
+  color: #a9adaf;
+}
+input[type="radio"]:disabled + label::before,
+input[type="checkbox"]:disabled + label::before {
+  color: #e9e9e9;
+}
