--- a/less/component-blocks/user-block.less
+++ b/less/component-blocks/user-block.less
@@ -23,16 +23,35 @@
   color: #000000;
   text-decoration: none;
   text-transform: uppercase;
+  transition: color .7s;
 }
-.user-block__item a:active {
-  color: #000000;
-  opacity: .4;
-}
-.user-block__item a:hover {
+.user-block__item a:hover,
+.user-block__item a:hover i {
   color: #fb565a;
+  opacity: 1;
+  transition: color .3s;
+  transition: opacity .3s;
 }
-.user-block__item .icon-basket {
+.user-block__item i {
   margin-right: 10px;
   font-size: 16px;
   line-height: 30px;
+  opacity: .3;
+  transition: color .7s;
+  transition: opacity .7s;
+}
+.user-block__item a:active,
+.user-block__item a:active i  {
+  color: #000000;
+  opacity: .4;
+  transition: color .3s;
+  transition: opacity .3s;
+}
+.user-block__item--active a::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  border-bottom: 2px solid #fb565a;
+  bottom: -5px;
+  left: 0;
 }
