--- a/less/component-blocks/about.less
+++ b/less/component-blocks/about.less
@@ -1,6 +1,8 @@
 .about {
-  margin-bottom: 50px;
+  padding-top: 58px;
+  padding-bottom: 31px;
   border-bottom: 2px solid #eeeeee;
+  .clearfix()
 }
 .about__wrap {
   width: 880px;
@@ -16,12 +18,13 @@
   width: 240px;
 }
 .about__column {
-  margin-bottom: 35px;
+  margin-bottom: 18px;
   .clearfix();
 }
 .column__title {
   margin: 0;
-  margin-bottom: 17px;
+  margin-top: 10px;
+  margin-bottom: 19px;
 }
 .column__list {
   .list-reset();
@@ -29,7 +32,7 @@
 .column__list li {
   position: relative;
   padding-bottom: 22px;
-  padding-left: 37px;
+  padding-left: 35px;
 }
 .column__list li::before {
   content: "";
@@ -41,18 +44,19 @@
   background-color: #fb565a;
 }
 .column__title--upper {
-  margin-bottom: 30px;
+  margin-bottom: 22px;
 }
 .column__logo {
   display: block;
   width: 187px;
   height: 75px;
-  margin: 0 auto;
-  margin-bottom: 32px;
+  margin-left: 30px;
+  margin-bottom: 27px;
 }
 .logo__sign {
   position: relative;
   text-align: center;
+  text-transform: uppercase;
 }
 .logo__sign span {
   position: relative;
