--- a/less/component-blocks/btn.less
+++ b/less/component-blocks/btn.less
@@ -3,7 +3,7 @@
   vertical-align: baseline;
   padding: 10px 40px;
   font-size: 12px;
-  line-height: 14px;
+  line-height: 18px;
   color: #ffffff;
   font-weight: 500;
   text-decoration: none;
@@ -27,11 +27,13 @@
   transition: background-color .3s,
               box-shadow .3s;
 }
+.btn--slider {
+  padding: 10px 70px;
+}
 .btn--social {
   padding: 0;
-  width: 60px;
-  height: 60px;
-  margin-right: 27px;
+  width: 62px;
+  height: 62px;
   border-radius: 50%;
   font-family: "symbols-nerds";
   font-size: 23px;
@@ -124,7 +126,7 @@
   min-width: 8px;
   height: 38px;
   padding: 0 15px;
-  font-size: 16px;
+  font-size: 12px;
   line-height: 38px;
   color: black;
   box-shadow: inset 0 0 0 2px #f2f2f2;
@@ -147,4 +149,7 @@ li:last-child .btn--paginator {
   width: auto;
   padding: 0 32px;
   height: 38px;
+}
+.btn--item-modal {
+  font-size: 18px;
 }
