--- a/less/component-blocks/clients.less
+++ b/less/component-blocks/clients.less
@@ -1,9 +1,10 @@
 .clients {
-  margin-bottom: 50px;
+  padding-top: 40px;
+  padding-bottom: 0px;
   border-bottom: 2px solid #eeeeee;
 }
 .clients__wrap {
-  width: 880px;
+  width: 860px;
   margin: 0 auto;
   padding: 0 20px; /* !Кастомный! */
 }
@@ -11,7 +12,7 @@
   min-width: 285px;
   display: inline-block;
   vertical-align: middle;
-  margin-bottom: 40px;
+  margin-bottom: 31px;
 }
 .client__block:nth-child(3n-1) {
   text-align: center;
