--- a/less/component-blocks/features.less
+++ b/less/component-blocks/features.less
@@ -1,5 +1,5 @@
 .features {
-  margin-bottom: 70px;
+  padding-bottom: 81px;
   border-bottom: 2px solid #eeeeee;
 }
 .features__wrap {
@@ -12,7 +12,6 @@
   width: 240px;
   float: left;
   margin-right: 80px;
-  margin-bottom: 40px;
 }
 .features__block:nth-child(3n) {
   margin-right: 0;
@@ -20,8 +19,14 @@
 .features__image {
   width: 240px;
   height: 124px;
+  margin-bottom: 23px;
+}
+.features__title {
+  margin-bottom: 10px;
 }
 .features__text {
+  margin-top: 13px;
+  margin-bottom: 26px;
   font-size: 15px;
   line-height: 22px;
 }
