--- a/less/component-blocks/user-block.less
+++ b/less/component-blocks/user-block.less
@@ -4,7 +4,7 @@
   text-align: right;
   min-width:  115px;
   max-width: 160px;
-  margin-left: 45px;
+  margin-left: 42px;
   font-size: 0;
 }
 .user-block__list {
@@ -18,8 +18,9 @@
 }
 .user-block__item a {
   position: relative;
+  padding-right: 1px;
   font-size: 14px;
-  line-height: 30px;
+  line-height: 18px;
   color: #000000;
   text-decoration: none;
   text-transform: uppercase;
@@ -35,7 +36,7 @@
 .user-block__item i {
   margin-right: 10px;
   font-size: 16px;
-  line-height: 30px;
+  line-height: 28px;
   opacity: .3;
   transition: color .7s;
   transition: opacity .7s;
