--- a/less/main-blocks/main-footer.less
+++ b/less/main-blocks/main-footer.less
@@ -1,5 +1,5 @@
 .main-footer {
-  padding-top: 30px;
+  padding-top: 25px;
   padding-bottom: 30px;
 }
 .main-footer__wrap {
@@ -7,7 +7,27 @@
   margin: 0 auto;
   padding: 0 10px;
 }
+.footer__text {
+  display: block;
+  float: right;
+  padding-top: 0;
+  padding-right: 20px;
+}
 .footer__text span {
   font-size: 36px;
   line-height: 36px;
+}
+.footer__text p {
+  margin-top: 10px;
+}
+.main-footer__social {
+  float: left;
+  font-size: 0;
+  padding-top: 5px;
+}
+.main-footer__social a {
+  margin-right: 28px;
+}
+.main-footer__social a:last-child {
+  margin-right: 0;
 }
