--- a/less/main-blocks/page-wrap.less
+++ b/less/main-blocks/page-wrap.less
@@ -1,6 +1,8 @@
 .page-wrap {
   width: 880px;
   margin: 0 auto;
+  margin-bottom: -7px;
   padding: 0 10px;
+  padding-top: 77px;
   .clearfix();
 }
