--- a/less/style.less
+++ b/less/style.less
@@ -17,9 +17,9 @@
 @import "component-blocks/clients.less";
 @import "component-blocks/features.less";
 @import "component-blocks/filters.less";
+@import "component-blocks/item-modal.less";
 @import "component-blocks/main-nav.less";
 @import "component-blocks/map.less";
 @import "component-blocks/paginator.less";
 @import "component-blocks/user-block.less";
-@import "component-blocks/social.less";
 @import "component-blocks/slider.less";
