--- a/less/component-blocks/map.less
+++ b/less/component-blocks/map.less
@@ -1,6 +1,8 @@
 .map {
   position: relative;
   min-height: 416px;
+  padding-top: 85px;
+  margin-bottom: 48px;
 }
 .map iframe{
   position: absolute;
