--- a/less/main-blocks/page-title.less
+++ b/less/main-blocks/page-title.less
@@ -1,12 +1,17 @@
 .page-title {
   margin: 0 auto;
-  padding: 0 10px;
+  padding-top: 38px;
+  padding-bottom: 35px;
   .clearfix();
   text-align: center;
   background-color: #eeeeee;
 }
 .page-title h1 {
-  width: 550px;
+  width: 700px;
   margin: 0 auto;
   padding-bottom: 50px;
+  padding-right: 10px;
+  font-size: 40px;
+  line-height: 48px;
+  text-transform: uppercase;
 }
