--- a/less/main-blocks/shop.less
+++ b/less/main-blocks/shop.less
@@ -5,12 +5,13 @@
 }
 .shop__sorting {
   .clearfix();
+  margin-bottom: 18px;
 }
 .shop__sorting-list {
   .list-reset();
   display: block;
   float: left;
-  width: 400px;
+  width: 360px;
 }
 .shop__sorting-list li {
   display: inline-block;
@@ -24,23 +25,24 @@
   font-size: 12px;
   line-height: 18px;
   text-decoration: none;
-  color: #b2b2b2;
+  text-transform: uppercase;
+  color: #c1c1c1;
   transition: color .7s;
 }
 .shop__sorting span {
   display: block;
   float: left;
-  margin-right: 40px;
+  margin-right: 38px;
   font-size: 12px;
   line-height: 18px;
-  text-decoration: uppercase;
+  text-transform: uppercase;
 }
 .shop__sorting-list a::after {
   content: "";
   position: absolute;
   width: 100%;
   left: 0;
-  bottom: 0;
+  bottom: -2px;
   border-bottom: 1px dashed #00ca74;
   cursor: pointer;
 }
@@ -65,6 +67,17 @@
 }
 .shop__sorting-price a {
   margin-right: 0;
+  font-size: 22px;
+}
+.icon-down-dir::before,
+.icon-up-dir::before {
+  width: 7px;
+}
+.shop__sorting-price i:hover {
+  color: #b5b5b5;
+}
+.shop__sorting-price i:active {
+  color: black;
 }
 .sort-icon--active {
   color: #00ca74;
@@ -73,13 +86,14 @@
 .shop__list {
   font-size: 0;
   text-align: right;
+  margin-bottom: -2px;
 }
 .shop__item {
   position: relative;
   display: inline-block;
   vertical-align: top;
   margin-right: 80px;
-  margin-bottom: 80px;
+  margin-bottom: 77px;
   border-top: 30px solid #f1f1f1;
   border-radius: 5px;
   font-size: 14px;
@@ -102,7 +116,11 @@
 .shop__item:hover {
   border-color: #797979;
   transition: border-color .3s;
+  z-index: 10;
 }
 .shop__item:nth-child(2n) {
   margin-right: 0;
+}
+.shop__item:hover .item-modal {
+  display: block;
 }
