--- a/less/style.less
+++ b/less/style.less
@@ -1,5 +1,6 @@
 @import "abstracts/mixins.less";
 @import "abstracts/variables.less";
+@import "abstracts/animation.less";
 
 @import "base/normalize.less";
 @import "base/fonts.less";
@@ -20,6 +21,7 @@
 @import "component-blocks/item-modal.less";
 @import "component-blocks/main-nav.less";
 @import "component-blocks/map.less";
+@import "component-blocks/overlay.less";
 @import "component-blocks/paginator.less";
 @import "component-blocks/user-block.less";
 @import "component-blocks/slider.less";
