minor fixes +check readme.md

--- a/less/component-blocks/map.less
+++ b/less/component-blocks/map.less
@@ -1,8 +1,11 @@
 .map {
   position: relative;
+  width: 1200px;
   min-height: 416px;
   padding-top: 85px;
   margin-bottom: 48px;
+  margin: 0 auto;
+  background: url("../../img/map-bg.png") 0 85px no-repeat;
 }
 .map iframe{
   position: absolute;
@@ -15,14 +18,18 @@
 }
 .form__feedback {
   position: absolute;
-  right: 0;
+  top: 80px;
+  left: 0;
   width: 220px;
   padding: 30px 20px;
   margin-top: 90px;
   background-color: #ffffff;
 }
 .form__feedback span {
+  display: block;
   margin-bottom: 20px;
+  max-height: 42px;
+  overflow: hidden;
 }
 .form__feedback .btn {
   box-sizing: border-box;
