--- a/less/component-blocks/slider.less
+++ b/less/component-blocks/slider.less
@@ -57,16 +57,21 @@
 }
 .slide__title {
   width: 480px;
+  min-height: 76px;
+  max-height: 80px;
   margin-top: 46px;
   margin-bottom: 19px;
   margin-left: -2px;
   font-size: 36px;
   line-height: 36px;
   font-weight: 500;
+  overflow: hidden;
 }
 .slide__text {
   width: 464px;
+  max-height: 70px;
   margin-bottom: 28px;
+  overflow: hidden;
 }
 .slider__list .slider__item:nth-child(1) {
   background: url("../img/slider-mac.png") no-repeat;
