--- a/less/main-blocks/shop.less
+++ b/less/main-blocks/shop.less
@@ -79,7 +79,9 @@
 .shop__sorting-price i:active {
   color: black;
 }
-.sort-icon--active {
+.sort-icon--active,
+.shop__sorting-price .sort-icon--active:hover,
+.shop__sorting-price .sort-icon--active:active {
   color: #00ca74;
   cursor: default;
 }
