big BEM LESS audit

--- a/less/abstracts/variables.less
+++ b/less/abstracts/variables.less
@@ -1,1 +1,58 @@
-@action-red: #fb565a;
+/* NOT USE for example */
+@color-btn-red: #fb565a;
+@color-btn-green: #00ca74;
+@color-btn-gold: #efc84a;
+
+@color-navlink: black;
+@color-navlink-hover: #fb565a;
+@color-navlink-active: fade(black, 40%);
+@color-navlink-underline: #fb565a;
+
+@color-btn-social: #e1e1e1;
+@color-btn-social-hover: #fb565a;
+@color-btn-social-active: #d6494d;
+
+@color-cart: fade(black, 30%);
+@color-cart-hover: #fb565a;
+@color-cart-active: fade(black, 15%);
+@color-cart-state: @color-cart;
+
+@color-input-form: #d7dcde;
+@color-input-form-hover: #a2a9ac;
+@color-input-form-active: #56bffb;
+
+@color-btn-submit: #f1f1f1;
+@color-btn-submit-hover: #e5e5e5;
+@color-btn-submit-active: #d5d5d5;
+
+@color-radiocheck-text: #283136;
+@color-radiocheck-text-icon: #c1c1c1;
+@color-radiocheck-text-hover: black;
+@color-radiocheck-text-icon-hover: #b5b5b5;
+@color-radiocheck-text-block: fade(@color-radiocheck-text, 40%);
+@color-radiocheck-text-icon-block: fade(@color-radiocheck-text-icon-hover, 30%);
+
+@color-paginator-border: fade(#b5b5b5, 90%);
+@color-paginator: #f1f1f1;
+@color-paginator-hover: #e5e5e5;
+@color-paginator-active: #d5d5d5;
+
+@color-sort-underline: #00ca74;
+@color-sort: fade(black, 30%);
+@color-sort-icon: #c1c1c1;
+@color-sort-hover: black;
+@color-sort-icon-hover: #b5b5b5;
+@color-sort-active: black;
+@color-sort-icon-active: black;
+@color-sort-state: black;
+@color-sort-icon-state: #00ca74;
+
+@color-border-item: fade(@color-border-hover, 10%);
+@color-border-hover: #797979;
+
+@color-border-item: fade(@color-border-hover, 10%);
+@color-border-hover: #797979;
+
+@color-btn-item: #fb565a;
+@color-btn-item-hover: #d6494d;
+@color-btn-item-hover: #b63538;
