--- a/less/component-blocks/map.less
+++ b/less/component-blocks/map.less
@@ -12,28 +12,5 @@
 }
 .map__wrap {
   position: relative;
-  width: 880px;
-  margin: 0 auto;
-  padding: 0 10px;
-}
-.form__feedback {
-  position: absolute;
-  top: 80px;
-  left: 0;
-  width: 220px;
-  padding: 30px 20px;
-  margin-top: 90px;
-  background-color: #ffffff;
-}
-.form__feedback span {
-  display: block;
-  margin-bottom: 20px;
-  max-height: 42px;
-  overflow: hidden;
-}
-.form__feedback .btn {
-  box-sizing: border-box;
-  width: 100%;
-  margin-top: 20px;
-  text-align: center;
+  .wrap();
 }
