--- a/less/main-blocks/main-footer.less
+++ b/less/main-blocks/main-footer.less
@@ -4,9 +4,7 @@
   padding-bottom: 30px;
 }
 .main-footer__wrap {
-  width: 880px;
-  margin: 0 auto;
-  padding: 0 10px;
+  .wrap();
 }
 .footer__text {
   display: block;
@@ -23,8 +21,8 @@
 }
 .main-footer__social {
   float: left;
-  font-size: 0;
   padding-top: 5px;
+  font-size: 0;
 }
 .main-footer__social a {
   margin-right: 28px;
