--- a/less/style.less
+++ b/less/style.less
@@ -1,27 +1,29 @@
-@import "abstracts/mixins.less";
-@import "abstracts/variables.less";
-@import "abstracts/animation.less";
+@import "abstracts/mixins";
+/* @import "abstracts/variables"; */
+@import "abstracts/animation";
 
-@import "base/normalize.less";
-@import "base/fonts.less";
-@import "base/global.less";
+@import "base/normalize";
+@import "base/fonts";
+@import "base/global";
 
-@import "main-blocks/main-footer.less";
-@import "main-blocks/main-header.less";
-@import "main-blocks/modal.less";
-@import "main-blocks/page-wrap.less";
-@import "main-blocks/page-title.less";
-@import "main-blocks/shop.less";
+@import "main-blocks/main-footer";
+@import "main-blocks/main-header";
+@import "main-blocks/shop";
 
-@import "component-blocks/about.less";
-@import "component-blocks/btn.less";
-@import "component-blocks/clients.less";
-@import "component-blocks/features.less";
-@import "component-blocks/filters.less";
-@import "component-blocks/item-modal.less";
-@import "component-blocks/main-nav.less";
-@import "component-blocks/map.less";
-@import "component-blocks/overlay.less";
-@import "component-blocks/paginator.less";
-@import "component-blocks/user-block.less";
-@import "component-blocks/slider.less";
+@import "component-blocks/about";
+@import "component-blocks/btn";
+@import "component-blocks/clients";
+@import "component-blocks/features";
+@import "component-blocks/filter-range";
+@import "component-blocks/filter-radio";
+@import "component-blocks/filter-checkbox";
+@import "component-blocks/form-feedback";
+@import "component-blocks/main-nav";
+@import "component-blocks/map";
+@import "component-blocks/modal";
+@import "component-blocks/overlay";
+@import "component-blocks/page-title";
+@import "component-blocks/paginator";
+@import "component-blocks/user-block";
+@import "component-blocks/shop-item";
+@import "component-blocks/slider";
