--- a/less/abstracts/mixins.less
+++ b/less/abstracts/mixins.less
@@ -1,3 +1,8 @@
+.wrap()  {
+  width: 880px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
 .clearfix() {
   &::after {
     content: "";
@@ -9,9 +14,6 @@
   padding: 0;
   margin: 0;
   list-style: none;
-}
-.checkbox() {
-  display: none;
 }
 .input-style() {
   position: absolute;
@@ -28,4 +30,30 @@
   color:black;
   opacity: 1;
   text-transform: uppercase;
+}
+.filters-label() {
+  display: inline-block;
+  vertical-align: baseline;
+  position: relative;
+  padding-left: 35px;
+  padding-top: 18px;
+  font-size: 16px;
+  color: #283136;
+  cursor: pointer;
+}
+.filters-color() {
+  &:hover {
+  color: #000000;
+
+    &::before {
+      color: #b5b5b5;
+    }
+  }
+}
+.filters-color-disabled() {
+  color: #a9adaf;
+
+  &::before {
+    color: #e9e9e9;
+  }
 }
