--- a/less/base/global.less
+++ b/less/base/global.less
@@ -1,6 +1,6 @@
 body {
 	font-family: "Roboto", "Arial", sans-serif;
-	min-width: 900px; /* С учётом паддинга в контейнере? */
+	min-width: 1200px;
 	font-size: 16px;
 	line-height: 22px;
 	font-weight: 500;
