--- a/less/component-blocks/about.less
+++ b/less/component-blocks/about.less
@@ -2,76 +2,77 @@
   padding-top: 58px;
   padding-bottom: 31px;
   border-bottom: 2px solid #eeeeee;
-  .clearfix()
+  .clearfix();
 }
 .about__wrap {
-  width: 880px;
-  margin: 0 auto;
-  padding: 0 10px;
-}
-.column__left {
-  float: left;
-  width: 590px;
-}
-.column__right {
-  float: right;
-  width: 240px;
+  .wrap();
 }
 .about__column {
   margin-bottom: 18px;
   .clearfix();
 }
-.column__title {
+.about__column-left {
+  float: left;
+  width: 590px;
+}
+.about__column-right {
+  float: right;
+  width: 240px;
+}
+.about__column-title {
   margin: 0;
   margin-top: 10px;
   margin-bottom: 19px;
 }
-.column__list {
+.about__column-list {
   .list-reset();
 }
-.column__list li {
+.about__column-list li {
   position: relative;
-  padding-bottom: 22px;
   padding-left: 35px;
+  padding-bottom: 22px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 25px;
+    height: 2px;
+    top: 10px;
+    left: 0;
+    background-color: #fb565a;
+  }
 }
-.column__list li::before {
-  content: "";
-  position: absolute;
-  width: 25px;
-  height: 2px;
-  top: 10px;
-  left: 0;
-  background-color: #fb565a;
-}
-.column__title--upper {
+.about__column-title--upper {
   margin-bottom: 22px;
 }
-.column__logo {
+.about__logo {
   display: block;
   width: 187px;
   height: 75px;
-  margin-left: 30px;
   margin-bottom: 27px;
+  margin-left: 30px;
 }
-.logo__sign {
+.about__logo-sign {
   position: relative;
   text-align: center;
   text-transform: uppercase;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 10px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #eeeeee;
+    z-index: 1;
+  }
 }
-.logo__sign span {
+.about__logo-sign span {
   position: relative;
   display: inline-block;
+  vertical-align: baseline;
   padding: 0 15px;
-  background-color: white;
+  background-color: #ffffff;
   z-index: 10;
-}
-.logo__sign::after {
-  content: "";
-  position: absolute;
-  top: 10px;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  background-color: #eeeeee;
-  z-index: 1;
 }
