--- a/less/component-blocks/btn.less
+++ b/less/component-blocks/btn.less
@@ -5,31 +5,107 @@
   font-size: 12px;
   line-height: 18px;
   color: #ffffff;
-  font-weight: 500;
   text-decoration: none;
   text-transform: uppercase;
   background-color: #fb565a;
-  border-radius: 4px;
+  border-radius: 3px;
   border: none;
   outline: none;
   cursor: pointer;
   transition: background-color .7s,
               box-shadow .7s;
+
+  &:hover {
+    background-color: #d6494d;
+    transition: background-color .3s,
+                box-shadow .3s;
+  }
+  &:active {
+    background-color: #b63538;
+    box-shadow: inset 0 3px 0 0 #9b2d30;
+    transition: background-color .3s,
+                box-shadow .3s;
+  }
 }
-.btn:hover {
-  background-color: #d6494d;
-  transition: background-color .3s,
-              box-shadow .3s;
+/* SLIDER BLOCK */
+.btn--slider{
+  width: 160px;
+  text-align: center;
 }
-.btn:active {
-  background-color: #b63538;
-  box-shadow: inset 0 3px 0 0 #9b2d30;
-  transition: background-color .3s,
-              box-shadow .3s;
+/* FEATURES BLOCK */
+.btn {
+  &--red {
+    background-color: #fb565a;
+
+    &:hover {
+      background-color: #d6494d;
+    }
+    &:active {
+      background-color: #b63538;
+      box-shadow: inset 0 3px 0 0 #9b2d30;
+    }
+  }
+  &--green {
+    background-color: #00ca74;
+
+    &:hover {
+      background-color: #01a25e;
+    }
+    &:active {
+      background-color: #009053;
+      box-shadow: inset 0 3px 0 0 #007b47;
+    }
+  }
+  &--yellow {
+    background-color: #efc84a;
+
+    &:hover {
+      background-color: #d6ae2c;
+    }
+    &:active {
+      background-color: #c09b24;
+      box-shadow: inset 0 3px 0 0 #a3841f;
+    }
+  }
 }
-.btn--slider {
-  padding: 10px 70px;
+/* POPUP MODAL BLOCK */
+.btn--modal {
+  width: 100%;
 }
+.btn--close {
+  position: absolute;
+  top: 7px;
+  right: 6px;
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  border-radius: 50%;
+  background-color: #fb565a;
+  &::after, &::before {
+    content: "";
+    position: absolute;
+    display: block;
+    top: 18px;
+    left: 8px;
+    width: 25px;
+    height: 5px;
+    background-color: #ffffff;
+  }
+  &::after {
+    transform: rotate(-45deg);
+  }
+  &::before {
+    transform: rotate(45deg);
+  }
+}
+/* FEEDBACK BLOCK */
+.btn--feedback {
+  box-sizing: border-box;
+  width: 100%;
+  margin-top: 20px;
+  text-align: center;
+}
+/* FOOTER BLOCK */
 .btn--social {
   padding: 0;
   width: 62px;
@@ -44,112 +120,7 @@
   background-color: #e1e1e1;
   overflow: hidden;
 }
-.btn--submit {
-  color: black;
-  background-color: #eeeeee;
-}
-.btn--submit:hover {
-  background-color: #e5e5e5;
-}
-.btn--submit:active {
-  background-color: #d5d5d5;
-  box-shadow: inset 0 3px 0 0 #b5b5b5;
-}
-.btn--modal {
-  width: 100%;
-}
-.btn--red {
-  background-color: #fb565a;
-}
-.btn--red:hover {
-  background-color: #d6494d;
-}
-.btn--red:active {
-  background-color: #b63538;
-  box-shadow: inset 0 3px 0 0 #9b2d30;
-}
-.btn--green {
-  background-color: #00ca74;
-}
-.btn--green:hover {
-  background-color: #01a25e;
-}
-.btn--green:active {
-  background-color: #009053;
-  box-shadow: inset 0 3px 0 0 #007b47;
-}
-.btn--yellow {
-  background-color: #efc84a;
-}
-.btn--yellow:hover {
-  background-color: #d6ae2c;
-}
-.btn--yellow:active {
-  background-color: #c09b24;
-  box-shadow: inset 0 3px 0 0 #a3841f;
-}
-.btn--close {
-  position: absolute;
-  padding: 0;
-  right: 6px;
-  top: 7px;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  outline: none;
-  border: none;
-  background-color: #fb565a;
-}
-.btn--close::after {
-  content: "";
-  position: absolute;
-  display: block;
-  top: 18px;
-  left: 8px;
-  width: 25px;
-  height: 5px;
-  background-color: white;
-  transform: rotate(-45deg);
-}
-.btn--close::before {
-  content: "";
-  position: absolute;
-  display: block;
-  top: 18px;
-  left: 8px;
-  width: 25px;
-  height: 5px;
-  background-color: white;
-  transform: rotate(45deg);
-}
-.btn--paginator {
-  min-width: 8px;
-  height: 38px;
-  padding: 0 15px;
-  font-size: 12px;
-  line-height: 38px;
-  color: black;
-  box-shadow: inset 0 0 0 2px #f2f2f2;
-  text-align: center;
-  background-color: #f1f1f1;
-  border-radius: 5px;
-}
-.btn--paginator-active {
-  background-color: white;
-}
-.btn--paginator:hover {
-  background-color: #e5e5e5;
-  box-shadow: none;
-}
-.btn--paginator:active {
-  background-color: #d5d5d5;
-  box-shadow: inset 0 3px 0 0 #b5b5b5;
-}
-li:last-child .btn--paginator {
-  width: auto;
-  padding: 0 32px;
-  height: 38px;
-}
-.btn--item-modal {
+/* SHOP-ITEM BLOCK */
+.btn--shop-item {
   font-size: 18px;
 }
