--- a/less/component-blocks/modal.less
+++ b/less/component-blocks/modal.less
@@ -6,7 +6,7 @@
   margin-left: -300px;
   width: 460px;
   padding: 50px 80px;
-  background-color: white;
+  background-color: #ffffff;
   box-shadow: 0 20px 60px rgba(0,1,1,.75);
   z-index: 100;
 }
