--- a/less/component-blocks/slider.less
+++ b/less/component-blocks/slider.less
@@ -4,14 +4,11 @@
   background: #eeeeee;
 }
 .slider__wrap {
-  width: 880px;
-  margin: 0 auto;
-  padding: 0 10px;
+  .wrap();
   .clearfix();
 }
 .slider input[type="radio"] {
-  position: absolute;
-  opacity: 0;
+  display: none;
 }
 .slider__controls {
   position: absolute;
@@ -20,8 +17,8 @@
   width: 200px;
   height: 20px;
   margin-right: -94px;
-  text-align: center;
   font-size: 0;
+  text-align: center;
   z-index: 50;
 }
 .slider__controls label {
@@ -47,13 +44,13 @@
   height: 326px;
 }
 .slider__item {
+  display: none;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   overflow: hidden;
-  display: none;
 }
 .slide__title {
   width: 480px;
