--- a/less/component-blocks/user-block.less
+++ b/less/component-blocks/user-block.less
@@ -12,6 +12,16 @@
 }
 .user-block__item {
   display: inline-block;
+  vertical-align: baseline;
+
+  &--active a::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    border-bottom: 2px solid #fb565a;
+    bottom: -5px;
+    left: 0;
+  }
 }
 .user-block__item + .user-block__item {
   margin-left: 20px;
@@ -25,13 +35,21 @@
   text-decoration: none;
   text-transform: uppercase;
   transition: color .7s;
-}
-.user-block__item a:hover,
-.user-block__item a:hover i {
-  color: #fb565a;
-  opacity: 1;
-  transition: color .3s;
-  transition: opacity .3s;
+
+  &:hover,
+  &:hover i {
+    color: #fb565a;
+    opacity: 1;
+    transition: color .3s;
+    transition: opacity .3s;
+  }
+  &:active,
+  &:active i {
+    color: #000000;
+    opacity: .4;
+    transition: color .3s;
+    transition: opacity .3s;
+  }
 }
 .user-block__item i {
   margin-right: 10px;
@@ -40,19 +58,4 @@
   opacity: .3;
   transition: color .7s;
   transition: opacity .7s;
-}
-.user-block__item a:active,
-.user-block__item a:active i  {
-  color: #000000;
-  opacity: .4;
-  transition: color .3s;
-  transition: opacity .3s;
-}
-.user-block__item--active a::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  border-bottom: 2px solid #fb565a;
-  bottom: -5px;
-  left: 0;
 }
