--- a/less/main-blocks/shop.less
+++ b/less/main-blocks/shop.less
@@ -1,4 +1,28 @@
 .shop {
+  width: 880px;
+  margin: 0 auto;
+  margin-bottom: -7px;
+  padding: 0 10px;
+  padding-top: 77px;
+  .clearfix();
+}
+.shop__filter-wrap {
+  float: left;
+  width: 240px;
+}
+.btn--submit {
+  color: black;
+  background-color: #eeeeee;
+
+  &:hover {
+    background-color: #e5e5e5;
+  }
+  &:active {
+    background-color: #d5d5d5;
+    box-shadow: inset 0 3px 0 0 #b5b5b5;
+  }
+}
+.shop__cards-wrap {
   float: right;
   width: 560px;
   font-size: 0;
@@ -17,7 +41,15 @@
   display: inline-block;
   vertical-align: top;
 }
-.shop__sorting a {
+.shop__sorting span {
+  display: block;
+  float: left;
+  margin-right: 38px;
+  font-size: 12px;
+  line-height: 18px;
+  text-transform: uppercase;
+}
+.shop__sorting-list a {
   position: relative;
   display: inline-block;
   vertical-align: top;
@@ -28,46 +60,39 @@
   text-transform: uppercase;
   color: #c1c1c1;
   transition: color .7s;
-}
-.shop__sorting span {
-  display: block;
-  float: left;
-  margin-right: 38px;
-  font-size: 12px;
-  line-height: 18px;
-  text-transform: uppercase;
-}
-.shop__sorting-list a::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  left: 0;
-  bottom: -2px;
-  border-bottom: 1px dashed #00ca74;
-  cursor: pointer;
-}
-.shop__sorting-list a:hover::after {
-  border-bottom: 1px solid #00ca74;
-}
-.shop__sorting-list a:hover {
-  color: black;
-  transition: color .3s;
+
+  &:hover {
+    color: black;
+    transition: color .3s;
+  }
+  &::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    left: 0;
+    bottom: -2px;
+    border-bottom: 1px dashed #00ca74;
+    cursor: pointer;
+  }
+  &:hover::after {
+    border-bottom: 1px solid #00ca74;
+  }
 }
 .shop__sorting-item--active a {
   color: black;
   cursor: default;
-}
-.shop__sorting-item--active a::after,
-.shop__sorting-item--active a:hover::after {
-  border-bottom: none;
+  &::after,
+  &:hover::after {
+    border-bottom: none;
+  }
 }
 .shop__sorting-price {
   display: block;
   float: right;
 }
 .shop__sorting-price a {
-  margin-right: 0;
   font-size: 22px;
+  color: #c1c1c1;
 }
 .icon-down-dir::before,
 .icon-up-dir::before {
@@ -89,40 +114,4 @@
   font-size: 0;
   text-align: right;
   margin-bottom: -2px;
-}
-.shop__item {
-  position: relative;
-  display: inline-block;
-  vertical-align: top;
-  margin-right: 80px;
-  margin-bottom: 77px;
-  border-top: 30px solid #f1f1f1;
-  border-radius: 5px;
-  font-size: 14px;
-  line-height: 18px;
-  transition: border-color .7s;
-}
-.shop__item::before {
-  content: "";
-  position: absolute;
-  display: block;
-  top: -20px;
-  left: 12px;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background-color: white;
-  box-shadow: 16px 0 0 0 white,
-              32px 0 0 0 white;
-}
-.shop__item:hover {
-  border-color: #797979;
-  transition: border-color .3s;
-  z-index: 10;
-}
-.shop__item:nth-child(2n) {
-  margin-right: 0;
-}
-.shop__item:hover .item-modal {
-  display: block;
 }
